recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:2: error: illegal start of simple expression
  if (levels==0) [
                 ^